# ai_data_scientist

./: .env.example  .gitignore  Dockerfile  README.md  create_sample.py  docker-compose.yml  main.py  pyproject.toml  run_demo.py
data/: titanic_sample.csv
src/: config.py  exceptions.py  logger.py  orchestrator.py
src/agents/: business_analyst.py  cleaning_agent.py  data_engineer.py  feature_engineer.py  ml_engineer.py  statistician.py  visualization_expert.py
src/dashboard/: app.py
src/models/: schemas.py
src/storage/: dataset_versions.py  experiment_store.py
src/tools/: cleaning_tools.py  data_tools.py  feature_tools.py  model_tools.py  report_tools.py  stats_tools.py  viz_tools.py
tests/: conftest.py  test_tools.py
